<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/movie_data_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/ll_movie_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="115dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="24dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/tv_run_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:id="@+id/tv_ratings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <TextView
                        android:id="@+id/tv_marked_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/marked_as_favorite"
                        android:visibility="gone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Button
                        android:id="@+id/btn_make_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="markAsFavorite"
                        android:text="@string/mark_as_favorite"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_movie_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_trailer_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_trailer_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_synopsis_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/tv_plot_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_reviews_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv__details_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="22sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_details_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>

</ScrollView>